logs/dag_id=spaceX_project/run_id=scheduled__2024-07-09T000000+0000/task_id=load_charachteristics/attempt=21.log
[2024-07-10T12:00:47.828+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-10T12:00:47.863+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T12:00:47.874+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T12:00:47.874+0000] {taskinstance.py:2306} INFO - Starting attempt 21 of 26
[2024-07-10T12:00:47.896+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_charachteristics> on 2024-07-09 00:00:00+00:00
[2024-07-10T12:00:47.906+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=771) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-10T12:00:47.911+0000] {standard_task_runner.py:63} INFO - Started process 773 to run task
[2024-07-10T12:00:47.911+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'spaceX_project', 'load_charachteristics', 'scheduled__2024-07-09T00:00:00+00:00', '--job-id', '580', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmp2gv3tzph']
[2024-07-10T12:00:47.914+0000] {standard_task_runner.py:91} INFO - Job 580: Subtask load_charachteristics
[2024-07-10T12:00:48.173+0000] {task_command.py:426} INFO - Running <TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [running]> on host afe5e479c9b4
[2024-07-10T12:00:48.260+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='rustam' AIRFLOW_CTX_DAG_ID='spaceX_project' AIRFLOW_CTX_TASK_ID='load_charachteristics' AIRFLOW_CTX_EXECUTION_DATE='2024-07-09T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='21' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-09T00:00:00+00:00'
[2024-07-10T12:00:48.261+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-10T12:00:48.286+0000] {sql.py:276} INFO - Executing: 
            COPY charachteristics(id,mass,diameter,height,cost_per_launch)
            FROM '/opt/***/dags/output.csv'
            DELIMETER ','
            CSV HEADER;
        
[2024-07-10T12:00:48.295+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T12:00:48.311+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T12:00:48.318+0000] {sql.py:487} INFO - Running statement: 
            COPY charachteristics(id,mass,diameter,height,cost_per_launch)
            FROM '/opt/***/dags/output.csv'
            DELIMETER ','
            CSV HEADER;
        , parameters: None
[2024-07-10T12:00:48.320+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-10T12:00:48.321+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DELIMETER"
LINE 4:             DELIMETER ','
                    ^

[2024-07-10T12:00:48.335+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=spaceX_project, task_id=load_charachteristics, run_id=scheduled__2024-07-09T00:00:00+00:00, execution_date=20240709T000000, start_date=20240710T120047, end_date=20240710T120048
[2024-07-10T12:00:48.350+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 580 for task load_charachteristics (syntax error at or near "DELIMETER"
LINE 4:             DELIMETER ','
                    ^
; 773)
[2024-07-10T12:00:48.368+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-10T12:00:48.576+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-10T12:00:48.579+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
